--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_core: ^2.6.1
   firebase_auth: ^4.2.8
   google_sign_in: ^6.0.0
+  flutter_login_facebook: ^1.7.0
 
 dev_dependencies:
   flutter_test:
