--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_auth: ^4.2.8
   google_sign_in: ^6.0.0
   flutter_login_facebook: ^1.7.0
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
