--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,8 +38,8 @@ dependencies:
   firebase_core: ^2.6.1
   firebase_auth: ^4.2.8
   google_sign_in: ^6.0.0
-  flutter_login_facebook: ^1.7.0
   provider: ^6.0.5
+  cloud_firestore: ^4.4.3
 
 dev_dependencies:
   flutter_test:
